<resources>
    <string name="app_name">Auth App</string>
    <string name="login_to_continue">Welcome Back!\n Login to Continue </string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account"> Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="msg_send_link">don\'t worry it happened .Please enter the E-mail associated with your account.</string>
    <string name="confirm">Confirm</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="continue_with_your_mobile_number">Continue with your mobile number</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="login_with">Login with</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="otp_code">OTP Code</string>
    <string name="invalid_otp">Invalid OTP Code</string>
    <string name="requried">Required</string>
    <string name="invalid">Invalid E-mail</string>
    <string name="invalidMobile">Invalid Mobile Number</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="try_again">Try again</string>
    <string name="verification_success">Verification success </string>

</resources>