<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/auth" />

    <TextView
        android:id="@+id/txt_createAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_extra_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/outline_person_24"
        android:drawablePadding="@dimen/spacing_too_small"
        android:elevation="@dimen/radius_too_small"
        android:fontFamily="@font/cairo_semibold"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_createAnAccount" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_extra_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/outline_email"
        android:drawablePadding="@dimen/spacing_too_small"
        android:elevation="@dimen/radius_too_small"
        android:fontFamily="@font/cairo_semibold"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_name" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_extra_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/password_24"
        android:drawablePadding="@dimen/spacing_too_small"
        android:elevation="@dimen/radius_too_small"
        android:fontFamily="@font/cairo_semibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_extra_large"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/primary"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/sign_up_with"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_small"
        android:layout_margin="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toStartOf="@id/view12"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:id="@+id/view12"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup" />

    <ImageView
        android:id="@+id/btn_signupWithGmail"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/gmail"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <ImageView
        android:id="@+id/btn_signupWithPhone"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/phone"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signupWithGmail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:paddingEnd="@dimen/spacing_too_small"
            android:text="@string/have_an_account_already"
            android:textSize="@dimen/text_small" />


        <TextView
            android:id="@+id/txt_gotoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/login"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>