<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="locale"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/auth" />

    <TextView
        android:id="@+id/txt_continueWithYourPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/continue_with_your_mobile_number"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_extra_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:background="@drawable/edit_text_shape"
        android:drawableStart="@drawable/outline_phone_24"
        android:drawablePadding="@dimen/spacing_too_small"
        android:elevation="@dimen/radius_too_small"
        android:fontFamily="@font/cairo_semibold"
        android:hint="@string/your_mobile_number"
        android:inputType="phone"
        android:padding="@dimen/spacing_small"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_continueWithYourPhone" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_extra_large"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/confirm"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobileNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>